Correct css file. Correct fitbank logo.

--- a/en/index.html
+++ b/en/index.html
@@ -50,7 +50,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="https://gensparkpublicblob.blob.core.windows.net/user-upload-image/moa_upload_image/6cad58d9-83be-4343-ae5b-e872f637dcc4" alt="FIT-BANK Logo" class="logo-img">
+                    <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="logo-img">
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -69,7 +69,7 @@
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item language-switcher">
-                        <a href="../es/" class="nav-link">🇪🇸 ES</a>
+                        <a href="../es/index.html" class="nav-link">🇪🇸 ES</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -85,7 +85,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-logo-large">
-                <img src="https://gensparkpublicblob.blob.core.windows.net/user-upload-image/moa_upload_image/6cad58d9-83be-4343-ae5b-e872f637dcc4" alt="FIT-BANK Logo" class="hero-logo-img">
+                <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
             </div>
             <h1>Advanced Core Banking Solutions</h1>
             <p class="hero-subtitle">Powering Financial Innovation Across Latin America</p>
