--- a/es/index.html
+++ b/es/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="https://gensparkpublicblob.blob.core.windows.net/user-upload-image/moa_upload_image/6cad58d9-83be-4343-ae5b-e872f637dcc4" alt="FIT-BANK Logo" class="logo-img">
+                    <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="logo-img">
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -38,7 +38,7 @@
                         <a href="#contact" class="nav-link">Contacto</a>
                     </li>
                     <li class="nav-item language-switcher">
-                        <a href="../en/" class="nav-link">🇺🇸 EN</a>
+                        <a href="../en/index.html" class="nav-link">🇺🇸 EN</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -54,7 +54,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-logo-large">
-                <img src="https://gensparkpublicblob.blob.core.windows.net/user-upload-image/moa_upload_image/6cad58d9-83be-4343-ae5b-e872f637dcc4" alt="FIT-BANK Logo" class="hero-logo-img">
+                <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
             </div>
             <h1>Soluciones Bancarias Avanzadas</h1>
             <p class="hero-subtitle">Impulsando la Innovación Financiera en América Latina</p>
