--- a/es/index.html
+++ b/es/index.html
@@ -29,28 +29,16 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#about" class="nav-link">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
                         <a href="#features" class="nav-link">Características</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#architecture" class="nav-link">Arquitectura</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#modules" class="nav-link">Módulos</a>
                     </li>
                     <li class="nav-item">
                         <a href="#clients" class="nav-link">Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#ai-assistant" class="nav-link">Asistente IA</a>
+                        <a href="#contact" class="nav-link">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link">Contacto</a>
+                        <button class="nav-cta" onclick="scrollToSection('contact')">Solicitar Demo</button>
                     </li>
                     <li class="nav-item language-switcher">
                         <a href="../en/" class="nav-link">🇺🇸 EN</a>
