--- a/es/index.html
+++ b/es/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="stat">
                     <span class="stat-number">5</span>
-                    <span class="stat-label">Países Atendidos</span>
+                    <span class="stat-label">Países</span>
                 </div>
             </div>
             <div class="hero-buttons">
