Attempt to implement home design

--- a/es/index.html
+++ b/es/index.html
@@ -55,34 +55,60 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-content">
-            <div class="hero-logo-large">
-                <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
-            </div>
-            <h1>Revolucionando los Sistemas Bancarios</h1>
-            <p class="hero-subtitle">El Sistema Bancario Central Integrado Más Completo</p>
-            <p class="hero-description">Descubre el pináculo de la automatización en la gestión bancaria con FIT-BANK. Diseñado a medida para optimizar operaciones, mejorar la rentabilidad y elevar el servicio al cliente. Capacitando a las instituciones financieras para lanzar nuevos productos sin esfuerzo.</p>
-            <div class="hero-stats">
-                <div class="stat">
-                    <span class="stat-number">35+</span>
-                    <span class="stat-label">Instituciones Financieras</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">21+</span>
-                    <span class="stat-label">Años de Experiencia</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">454%</span>
-                    <span class="stat-label">Crecimiento Comprobado</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">5</span>
-                    <span class="stat-label">Países</span>
+        <div class="hero-container">
+            <!-- Left side - Image -->
+            <div class="hero-image-section">
+                <div class="hero-image-wrapper">
+                    <img src="../assets/hero-person-working.png" alt="Profesional trabajando felizmente con el sistema FIT-BANK" class="hero-person-img">
+                    <div class="hero-image-overlay">
+                        <div class="floating-elements">
+                            <div class="floating-card">
+                                <span class="card-icon">📊</span>
+                                <span>Análisis en Tiempo Real</span>
+                            </div>
+                            <div class="floating-card">
+                                <span class="card-icon">🔒</span>
+                                <span>Seguridad Bancaria</span>
+                            </div>
+                            <div class="floating-card">
+                                <span class="card-icon">⚡</span>
+                                <span>Operaciones 24/7</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="hero-buttons">
-                <button class="btn-primary" onclick="scrollToSection('contact')">Comenzar</button>
-                <button class="btn-secondary" onclick="scrollToSection('features')">Saber Más</button>
+            
+            <!-- Right side - Content -->
+            <div class="hero-content">
+                <div class="hero-logo-large">
+                    <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
+                </div>
+                <h1>Revolucionando los Sistemas Bancarios</h1>
+                <p class="hero-subtitle">El Sistema Bancario Central Integrado Más Completo</p>
+                <p class="hero-description">Descubre el pináculo de la automatización en la gestión bancaria con FIT-BANK. Diseñado a medida para optimizar operaciones, mejorar la rentabilidad y elevar el servicio al cliente. Capacitando a las instituciones financieras para lanzar nuevos productos sin esfuerzo.</p>
+                <div class="hero-stats">
+                    <div class="stat">
+                        <span class="stat-number">35+</span>
+                        <span class="stat-label">Instituciones Financieras</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number">21+</span>
+                        <span class="stat-label">Años de Experiencia</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number">454%</span>
+                        <span class="stat-label">Crecimiento Comprobado</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number">5</span>
+                        <span class="stat-label">Países</span>
+                    </div>
+                </div>
+                <div class="hero-buttons">
+                    <button class="btn-primary" onclick="scrollToSection('contact')">Comenzar</button>
+                    <button class="btn-secondary" onclick="scrollToSection('features')">Saber Más</button>
+                </div>
             </div>
         </div>
     </section>
