Initial implementation of hero image.

--- a/en/index.html
+++ b/en/index.html
@@ -78,34 +78,42 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-content">
-            <div class="hero-logo-large">
-                <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
-            </div>
-            <h1>Revolutionizing Banking Systems</h1>
-            <p class="hero-subtitle">The Most Comprehensive Integrated Central Banking System</p>
-            <p class="hero-description">Discover the pinnacle of banking management automation with FIT-BANK. Tailor-made to optimize operations, improve profitability, and elevate customer service. Empowering financial institutions to launch new products effortlessly and revitalize their business landscape.</p>
-            <div class="hero-stats">
-                <div class="stat">
-                    <span class="stat-number">35+</span>
-                    <span class="stat-label">Financial Institutions</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">21+</span>
-                    <span class="stat-label">Years Experience</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">454%</span>
-                    <span class="stat-label">Proven Growth</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">5</span>
-                    <span class="stat-label">Countries Served</span>
+        <div class="hero-container">
+            <!-- Left side - Image -->
+            <div class="hero-image-section">
+                <div class="hero-image-wrapper">
+                    <img src="../assets/hero-person-working.png" alt="Professional working happily with FIT-BANK system" class="hero-person-img">
+                    <div class="hero-image-overlay">
+                        <div class="floating-elements">
+                            <div class="floating-card">
+                                <span class="card-icon">📊</span>
+                                <span>Real-time Analytics</span>
+                            </div>
+                            <div class="floating-card">
+                                <span class="card-icon">🔒</span>
+                                <span>Bank-grade Security</span>
+                            </div>
+                            <div class="floating-card">
+                                <span class="card-icon">⚡</span>
+                                <span>24/7 Operations</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="hero-buttons">
-                <button class="btn-primary" onclick="scrollToSection('contact')">Get Started</button>
-                <button class="btn-secondary" onclick="scrollToSection('features')">Learn More</button>
+            
+            <!-- Right side - Content -->
+            <div class="hero-content">
+                <div class="hero-logo-large">
+                    <img src="../assets/fitbank_logo.png" alt="FIT-BANK Logo" class="hero-logo-img">
+                </div>
+                <h1>Revolutionizing Banking Systems</h1>
+                <p class="hero-subtitle">The Most Comprehensive Integrated Central Banking System</p>
+                <p class="hero-description">Discover the pinnacle of banking management automation with FIT-BANK. Tailor-made to optimize operations, improve profitability, and elevate customer service. Empowering financial institutions to launch new products effortlessly and revitalize their business landscape.</p>
+                <div class="hero-buttons">
+                    <button class="btn-primary" onclick="scrollToSection('contact')">Get Started</button>
+                    <button class="btn-secondary" onclick="scrollToSection('features')">Learn More</button>
+                </div>
             </div>
         </div>
     </section>
