feat(clients): add logos to client cards, align logos with new CSS, generate placeholder SVG logos; update countries count in EN stats to 12 to match ES; create assets/logos/ with generator script

--- a/en/index.html
+++ b/en/index.html
@@ -447,7 +447,7 @@
 <section id="clients" class="section hero hero--small hero-gradient-3">
     <div class="hero-inner">
         <h1>Powering Financial Growth Across Latin America</h1>
-        <p>Trusted by 35+ financial institutions in 8 countries with proven 454% average growth results</p>
+        <p>Trusted by 35+ financial institutions in 12 countries with proven 454% average growth results</p>
         
         <!-- Ecuador Region -->
         <div class="regional-section" style="margin-bottom: var(--spacing-2xl);">
@@ -460,48 +460,56 @@
             <div class="enhanced-client-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: var(--spacing-lg);">
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Financial Leader</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/jep.svg" alt="JEP logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">JEP</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">One of Ecuador's leading financial institutions</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Indigenous Banking</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/mushuc_runa.svg" alt="Mushuc Runa logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Mushuc Runa</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">First indigenous bank in Latin America</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Cooperative Leader</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_atuntaqui.svg" alt="Cooperativa Atuntaqui logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Atuntaqui</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Progressive cooperative serving northern Ecuador</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Regional Banking</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_la_dolorosa.svg" alt="Cooperativa La Dolorosa logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa La Dolorosa</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Established regional cooperative</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Mountain Region</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_vision_de_los_andes.svg" alt="Cooperativa Visión de los Andes logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Visión de los Andes</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Regional financial services</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Growing Cooperative</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_senor_de_giron.svg" alt="Cooperativa Señor de Girón logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Señor de Girón</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Community-centered financial services</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Local Community</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_luz_del_valle.svg" alt="Cooperativa Luz del Valle logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Luz del Valle</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Focus on community development</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Traditional Values</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/cooperativa_pilahuin_tio.svg" alt="Cooperativa Pilahuin Tio logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Cooperativa Pilahuin Tio</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Indigenous community banking</p>
                 </div>
@@ -519,12 +527,14 @@
             <div class="enhanced-client-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: var(--spacing-lg);">
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">International Banking</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/global_bank_corp.svg" alt="Global Bank Corp logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Global Bank Corp</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Expanding digital banking solutions</p>
                 </div>
 
                 <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                     <span style="display: inline-block; background: var(--chip); color: var(--muted); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Digital Innovation</span>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/caribbean_financial.svg" alt="Caribbean Financial logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Caribbean Financial</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Leading fintech solutions</p>
                 </div>
@@ -534,6 +544,7 @@
                         <span style="background: rgba(134, 239, 172, 0.1); color: #22c55e; padding: var(--spacing-xs); border-radius: 6px; font-size: 0.75rem;">Growth</span>
                         <span style="background: rgba(90, 162, 255, 0.1); color: var(--brand); padding: var(--spacing-xs); border-radius: 6px; font-size: 0.75rem;">Fintech</span>
                     </div>
+                    <div class="client-logo"><img class="lazy" data-src="../assets/logos/central_america_united_bank.svg" alt="Central America United Bank logo"></div>
                     <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Central America United Bank</h3>
                     <p style="color: var(--muted); font-size: 0.9rem;">Regional banking expansion</p>
                 </div>
@@ -597,7 +608,7 @@
                     <div style="color: var(--muted); font-size: 0.9rem;">Financial Institutions</div>
                 </div>
                 <div style="text-align: center;">
-                    <div style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); margin-bottom: var(--spacing-xs);">8</div>
+                    <div style="font-size: 2.5rem; font-weight: 700; color: var(--brand-2); margin-bottom: var(--spacing-xs);">12</div>
                     <div style="color: var(--muted); font-size: 0.9rem;">Countries</div>
                 </div>
                 <div style="text-align: center;">
