Correct link to other language page.

--- a/en/index.html
+++ b/en/index.html
@@ -64,7 +64,7 @@
                         <button class="nav-cta" onclick="scrollToSection('contact')">Get Demo</button>
                     </li>
                     <li class="nav-item language-switcher">
-                        <a href="../es/" class="nav-link">🇪🇸 ES</a>
+                        <a href="../es/index.html" class="nav-link">🇪🇸 ES</a>
                     </li>
                 </ul>
                 <div class="hamburger" onclick="toggleMenu()">
