--- a/es/index.html
+++ b/es/index.html
@@ -41,7 +41,7 @@
                         <button class="nav-cta" onclick="scrollToSection('contact')">Solicitar Demo</button>
                     </li>
                     <li class="nav-item language-switcher">
-                        <a href="../en/" class="nav-link">🇺🇸 EN</a>
+                        <a href="../en/index.html" class="nav-link">🇺🇸 EN</a>
                     </li>
                 </ul>
                 <div class="hamburger">
