chore(logos): add missing SVG placeholder for Red Financiera de Panamá and insert logo into ES client card

--- a/es/index.html
+++ b/es/index.html
@@ -583,6 +583,7 @@
 
             <div class="enhanced-client-card" style="background: var(--card); border: 1px solid #1c244d; border-radius: var(--border-radius-small); padding: var(--spacing-lg); transition: var(--transition);">
                 <span style="display: inline-block; background: var(--chip); color: var(--brand-2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: 20px; font-size: 0.8rem; font-weight: 600; margin-bottom: var(--spacing-sm);">Expansión Regional</span>
+                <div class="client-logo"><img class="lazy" data-src="../assets/logos/red_financiera_de_panama.svg" alt="Red Financiera de Panamá logo"></div>
                 <h3 style="font-size: 1.1rem; font-weight: 600; color: var(--ink); margin-bottom: var(--spacing-sm);">Red Financiera de Panamá</h3>
                 <p style="color: var(--muted); font-size: 0.9rem; margin-bottom: var(--spacing-md);">Instituciones financieras con fuerte presencia regional, enfocadas en desarrollo económico y transacciones transfronterizas.</p>
                 <div style="display: flex; flex-wrap: wrap; gap: var(--spacing-xs);">
